# tutorial

./: .gitignore  CNAME  Dockerfile  Dockerfile.base  Gemfile  LICENSE  Makefile  README.md  _config.yml  dune-project  index.markdown  otb.install  otb.opam  package.json  planning.md
.github/workflows/: deploy.yml  workflow.yml
_layouts/: default.html  page.html
assets/: algodiff_example.vsd  cnn_workflow.vsd  conv.vsd  fork_join.vsd  gradients.vsd  im2col.vsd  inceptionv3.vsd  lstm.vsd  regression.vsd  residual-block.vsd  simplex.vsd  svm_margin.vsd  trio.vsd
book/: appa.html  appendix.tex  atlas.json  author_bio.html  author_bio.tex  book.tex  dedication.html  dedication.tex  dune  faqs.html  index.html  install.html  references.bib  titlepage.html  toc.scm
book/aeos/: README.md  dune.inc
book/algodiff/: README.md  prelude.ml
book/architecture/: README.md
book/backend/: README.md  prelude.ml
book/broadcast/: README.md
book/case-finance/: README.md
book/case-gpu/: README.md
book/case-image-inception/: README.md
book/case-nst/: README.md
book/case-obj-detect/: README.md
book/case-recommender/: README.md
book/cgraph/: README.md
book/community/: README.md  Readme.md
book/constant/: README.md
book/convention/: README.md  prelude.ml
book/core-opt/: README.md
book/dataframe/: README.md  dune.inc
book/diffequation/: README.md  prelude.ml
book/distributed/: README.md
book/introduction/: README.md  dune  dune.inc  prelude.ml
book/linear-algebra/: README.md  dune.inc  prelude.ml
book/maths/: README.md  prelude.ml
book/matrix/: README.md
book/ndarray/: README.md  dune  dune.inc  prelude.ml
book/neural-network/: README.md  prelude.ml
book/neural-ode/: README.md
book/nlp/: README.md
book/optimisation/: README.md
book/ppl/: README.md
book/prologue/: README.md  dune
book/regression/: README.md  dune.inc  prelude.ml
book/signal/: README.md
book/slicing/: README.md
book/stats/: README.md
book/symbolic/: README.md  dune.inc  prelude.ml
book/testing/: README.md  prelude.ml
book/utilities/: README.md
book/visualisation/: README.md  prelude.ml
book/zoo/: README.md  dune.inc
chapters/: algodiff.md  convention.md  dataframe.md  diffequation.md  introduction.md  linalg.md  maths.md  ndarray.md  neural-network.md  optimisation.md  regression.md  signal.md  slicing.md  stats.md  testing.md  visualization.md
docs/: CNAME  aeos.html  algodiff.html  architecture.html  backend.html  broadcast.html  case-finance.html  case-gpu.html  case-image-inception.html  case-nst.html  case-obj-detect.html  case-recommender.html  cgraph.html  community.html  constant.html  convention.html  core-opt.html  dataframe.html  diffequation.html  distributed.html  epilogue.html  faqs.html  index.html  install.html  introduction.html  linear-algebra.html  maths.html  matrix.html  ndarray.html  neural-network.html  neural-ode.html  nlp.html  optimisation.html  ppl.html  prologue.html  regression.html  signal.html  slicing.html  stats.html  symbolic.html  (+5 more)
docs/css/: app.css
docs/js/: discourse.js
examples/: dune
examples/code/aeos/: app.ml  dune  interface_00.ml  interface_00.mli
examples/code/dataframe/: example_00.ml  example_01.ml  example_02.ml
examples/code/diffequation/: plot_01.ml  symplectic.ml
examples/code/introduction/: hello.ml  world.ml
examples/code/linear-algebra/: example_00.ml
examples/code/ndarray/: .merlin  app.ml  dune  dune-project  interface_00.ml  interface_00.mli  interface_01.ml  interface_01.mli  interface_02.ml  interface_02.mli  interface_03.ml  interface_03.mli  interface_04.ml  interface_04.mli  otb-example.install  otb-example.opam
examples/code/neural-network/: activations.ml
examples/code/nlp/: dirichlet.ml
examples/code/optimisation/: plot.ml
examples/code/regression/: data_02.csv  exp_reg.ml  gaussian_kernel.ml  logistic.ml  mul_reg.ml  ploly_reg.ml  plot_01.ml  svm.ml
examples/code/signal/: goog.csv  goog.ml  sunspot.csv  sunspot.ml  touchtone.csv  touchtone.ml
examples/code/stats/: gamma.ml
examples/code/symbolic/: app.ml  dune  interface_00.ml  interface_00.mli  interface_01.ml  interface_01.mli
examples/code/ztest/: app.ml  dune  dune-project  otb-example-ztest.opam
static/: dune
static/css/: app.css
static/js/: discourse.js
static/scss/: _index-toc.scss  _settings.scss
