(alias
  (name html)
  (deps aeos.html
        algodiff.html
        architecture.html
        backend.html
        case-finance.html
        case-image-inception.html
        case-nst.html
        case-obj-detect.html
        case-recommender.html
        cgraph.html
        constant.html
        convention.html
        core-opt.html
        dataframe.html
        diffequation.html
        distributed.html
        introduction.html
        linear-algebra.html
        maths.html
        ndarray.html
        neural-network.html
        nlp.html
        optimisation.html
        prologue.html
        regression.html
        signal.html
        slicing.html
        stats.html
        symbolic.html
        testing.html
        utilities.html
        visualisation.html
        zoo.html))

(alias
  (name latex)
  (deps aeos.tex
        algodiff.tex
        architecture.tex
        backend.tex
        case-finance.tex
        case-image-inception.tex
        case-nst.tex
        case-obj-detect.tex
        case-recommender.tex
        cgraph.tex
        constant.tex
        convention.tex
        core-opt.tex
        dataframe.tex
        diffequation.tex
        distributed.tex
        introduction.tex
        linear-algebra.tex
        maths.tex
        ndarray.tex
        neural-network.tex
        nlp.tex
        optimisation.tex
        prologue.tex
        regression.tex
        signal.tex
        slicing.tex
        stats.tex
        symbolic.tex
        testing.tex
        utilities.tex
        visualisation.tex
        zoo.tex))

(rule
  (targets aeos.html)
  (deps    (:md_file aeos/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets aeos.tex)
  (deps    (:md_file aeos/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets algodiff.html)
  (deps    (:md_file algodiff/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets algodiff.tex)
  (deps    (:md_file algodiff/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets architecture.html)
  (deps    (:md_file architecture/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets architecture.tex)
  (deps    (:md_file architecture/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets backend.html)
  (deps    (:md_file backend/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets backend.tex)
  (deps    (:md_file backend/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets case-finance.html)
  (deps    (:md_file case-finance/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets case-finance.tex)
  (deps    (:md_file case-finance/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets case-image-inception.html)
  (deps    (:md_file case-image-inception/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets case-image-inception.tex)
  (deps    (:md_file case-image-inception/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets case-nst.html)
  (deps    (:md_file case-nst/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets case-nst.tex)
  (deps    (:md_file case-nst/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets case-obj-detect.html)
  (deps    (:md_file case-obj-detect/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets case-obj-detect.tex)
  (deps    (:md_file case-obj-detect/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets case-recommender.html)
  (deps    (:md_file case-recommender/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets case-recommender.tex)
  (deps    (:md_file case-recommender/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets cgraph.html)
  (deps    (:md_file cgraph/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets cgraph.tex)
  (deps    (:md_file cgraph/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets constant.html)
  (deps    (:md_file constant/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets constant.tex)
  (deps    (:md_file constant/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets convention.html)
  (deps    (:md_file convention/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets convention.tex)
  (deps    (:md_file convention/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets core-opt.html)
  (deps    (:md_file core-opt/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets core-opt.tex)
  (deps    (:md_file core-opt/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets dataframe.html)
  (deps    (:md_file dataframe/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets dataframe.tex)
  (deps    (:md_file dataframe/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets diffequation.html)
  (deps    (:md_file diffequation/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets diffequation.tex)
  (deps    (:md_file diffequation/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets distributed.html)
  (deps    (:md_file distributed/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets distributed.tex)
  (deps    (:md_file distributed/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets introduction.html)
  (deps    (:md_file introduction/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets introduction.tex)
  (deps    (:md_file introduction/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets linear-algebra.html)
  (deps    (:md_file linear-algebra/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets linear-algebra.tex)
  (deps    (:md_file linear-algebra/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets maths.html)
  (deps    (:md_file maths/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets maths.tex)
  (deps    (:md_file maths/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets ndarray.html)
  (deps    (:md_file ndarray/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets ndarray.tex)
  (deps    (:md_file ndarray/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets neural-network.html)
  (deps    (:md_file neural-network/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets neural-network.tex)
  (deps    (:md_file neural-network/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets nlp.html)
  (deps    (:md_file nlp/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets nlp.tex)
  (deps    (:md_file nlp/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets optimisation.html)
  (deps    (:md_file optimisation/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets optimisation.tex)
  (deps    (:md_file optimisation/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets prologue.html)
  (deps    (:md_file prologue/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets prologue.tex)
  (deps    (:md_file prologue/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets regression.html)
  (deps    (:md_file regression/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets regression.tex)
  (deps    (:md_file regression/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets signal.html)
  (deps    (:md_file signal/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets signal.tex)
  (deps    (:md_file signal/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets slicing.html)
  (deps    (:md_file slicing/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets slicing.tex)
  (deps    (:md_file slicing/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets stats.html)
  (deps    (:md_file stats/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets stats.tex)
  (deps    (:md_file stats/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets symbolic.html)
  (deps    (:md_file symbolic/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets symbolic.tex)
  (deps    (:md_file symbolic/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets testing.html)
  (deps    (:md_file testing/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets testing.tex)
  (deps    (:md_file testing/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets utilities.html)
  (deps    (:md_file utilities/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets utilities.tex)
  (deps    (:md_file utilities/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets visualisation.html)
  (deps    (:md_file visualisation/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets visualisation.tex)
  (deps    (:md_file visualisation/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))

(rule
  (targets zoo.html)
  (deps    (:md_file zoo/README.md))
  (action  (run otb-convert_md %{md_file} -t html -o %{targets})))

(rule
  (targets zoo.tex)
  (deps    (:md_file zoo/README.md))
  (action  (run otb-convert_md %{md_file} -t latex -o %{targets})))
