(alias
  (name site)
  (deps css/app.css
        css/prism.css
        images/visualisation/plot_003.png
        images/visualisation/plot_023.png
        js/_functions.js
        js/app.js
        js/discourse.js
        js/jquery.min.js
        js/modernizr.js
        js/prism.js
        js/min/app-min.js
        js/min/modernizr-min.js
        theme/epub/layout.html
        theme/mobi/layout.html
        theme/pdf/pdf.css))(alias (name site) (deps faqs.html))
  (rule
    (targets faqs.html)
    (deps    (alias ../book/html) ../book/faqs.html ../bin/bin/app.exe )
    (action  (run otb-build build faqs -o . -repo-root ..)))

(alias (name site) (deps index.html))
  (rule
    (targets index.html)
    (deps    (alias ../book/html) ../book/index.html ../bin/bin/app.exe )
    (action  (run otb-build build index -o . -repo-root ..)))

(alias (name site) (deps install.html))
  (rule
    (targets install.html)
    (deps    (alias ../book/html) ../book/install.html ../bin/bin/app.exe )
    (action  (run otb-build build install -o . -repo-root ..)))

(alias (name site) (deps toc.html))
  (rule
    (targets toc.html)
    (deps    (alias ../book/html) ../book/toc.html ../bin/bin/app.exe ../book/toc.scm)
    (action  (run otb-build build toc -o . -repo-root ..)))

(alias (name site) (deps algodiff.html))

(rule
  (targets algodiff.html)
  (deps    (:x ../book/algodiff.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps architecture.html))

(rule
  (targets architecture.html)
  (deps    (:x ../book/architecture.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps backend.html))

(rule
  (targets backend.html)
  (deps    (:x ../book/backend.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps cgraph.html))

(rule
  (targets cgraph.html)
  (deps    (:x ../book/cgraph.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps constant.html))

(rule
  (targets constant.html)
  (deps    (:x ../book/constant.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps dataframe.html))

(rule
  (targets dataframe.html)
  (deps    (:x ../book/dataframe.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps diffequation.html))

(rule
  (targets diffequation.html)
  (deps    (:x ../book/diffequation.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps introduction.html))

(rule
  (targets introduction.html)
  (deps    (:x ../book/introduction.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps linear-algebra.html))

(rule
  (targets linear-algebra.html)
  (deps    (:x ../book/linear-algebra.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps maths.html))

(rule
  (targets maths.html)
  (deps    (:x ../book/maths.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps matrix.html))

(rule
  (targets matrix.html)
  (deps    (:x ../book/matrix.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps ndarray.html))

(rule
  (targets ndarray.html)
  (deps    (:x ../book/ndarray.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps neural-network.html))

(rule
  (targets neural-network.html)
  (deps    (:x ../book/neural-network.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps neural-ode.html))

(rule
  (targets neural-ode.html)
  (deps    (:x ../book/neural-ode.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps nlp.html))

(rule
  (targets nlp.html)
  (deps    (:x ../book/nlp.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps optimisation.html))

(rule
  (targets optimisation.html)
  (deps    (:x ../book/optimisation.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps prologue.html))

(rule
  (targets prologue.html)
  (deps    (:x ../book/prologue.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps stats.html))

(rule
  (targets stats.html)
  (deps    (:x ../book/stats.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps visualisation.html))

(rule
  (targets visualisation.html)
  (deps    (:x ../book/visualisation.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps zoo.html))

(rule
  (targets zoo.html)
  (deps    (:x ../book/zoo.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))
